--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/MaxMady/Neonix#readme",
   "dependencies": {
+    "axios": "^1.3.4",
     "discord.js-selfbot-v13": "^2.12.1",
     "https": "^1.0.0"
   }
