--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   },
   "homepage": "https://github.com/MaxMady/Neonix#readme",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.2.0",
     "axios": "^1.3.4",
     "colors": "^1.4.0",
     "discord.js-selfbot-v13": "^2.12.1",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "parse-data-url": "^5.0.0",
+    "pureimage": "^0.3.17"
   }
 }
